syntax = "proto3";

package cn.monkey.proto;

option optimize_for = SPEED;
option java_outer_classname = "Game";

message Login {
  string username = 1;
  string password = 2;
  string uid = 3;
}

message Session {
  string token = 1;
}

message Enter {
  string password = 1;
}

message Player {
  string id = 1;
  string name = 2;
}


message EnterResult {
  repeated Player players = 1;
}